changed config files

--- a/NAD_IABRS/appsettings.json
+++ b/NAD_IABRS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyWebApiConection": "User ID =postgres;Password=mojoat13;Server=host.docker.internal;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;"
+    "MyWebApiConection": "User ID =postgres;Password=DBpassword9fgv4v934n;Server=host.docker.internal;Port=5432;Database=testDb;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
