Added role Creation and changed sql db create

--- a/Azure_IABRS/IABRS/appsettings.json
+++ b/Azure_IABRS/IABRS/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyWebApiConection": "Data Source=JOHNCPLAPTOP;Initial Catalog=testsForNAD;User ID=sa;Password=password"
+    "MyWebApiConection": "Data Source=JOHNCPLAPTOP;Initial Catalog=testsForNAD;User ID=sa;Password=mojoat13"
   },
   "Logging": {
     "LogLevel": {
