--- a/Azure_IABRS/IABRS/Properties/launchSettings.json
+++ b/Azure_IABRS/IABRS/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62712",
+      "applicationUrl": "https://localhost:44378/",
       "sslPort": 44378
     }
   },
