--- a/Azure_IABRS/IABRS/IABRS.csproj
+++ b/Azure_IABRS/IABRS/IABRS.csproj
@@ -28,6 +28,10 @@
     <Compile Remove="Migrations\20191129192141_addIdent.Designer.cs" />
     <Compile Remove="Migrations\20191201024823_merge.cs" />
     <Compile Remove="Migrations\20191201024823_merge.Designer.cs" />
+    <Compile Remove="Migrations\20191201203027_addInstToUser.cs" />
+    <Compile Remove="Migrations\20191201203027_addInstToUser.Designer.cs" />
+    <Compile Remove="Migrations\20191201203810_InstManyToUser.cs" />
+    <Compile Remove="Migrations\20191201203810_InstManyToUser.Designer.cs" />
   </ItemGroup>
 
 
